updated index.html - improved instructions

--- a/a-restful/public/index.html
+++ b/a-restful/public/index.html
@@ -32,7 +32,7 @@
 
   <br/>
 
-  <p>Instructions:<br/>Use keyboard keys to queue commands, then click the send button to send them to server</p>
+  <p>Instructions:<br/>Use keyboard arrow keys to queue commands, then click the send button to send them to server</p>
 
   <script>
     // Setup grid
